--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 <body>
 
 <h1>This is my first file in my new git repo.</p>
+<div><img"nature-images..jpg"></div>
+<p>A new line in our file!</p>
 </body>
 </html>
 		
