--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 <body>
 
 <h1>This is my first file in my new git repo.</p>
-<div><img"nature-images..jpg"></div>
-<p>A new line in our file!</p>
+<p>this line is here to show how merging works!</p>
 </body>
 </html>
 		
